# rag-test

./: .gitignore  README.md  docker-compose.yaml
.dev_docs/: PLAN_RAG.md
backend/: main_api.py  pyproject.toml
backend/project1_rag/: config.py  ingest.py  query.py
backend/scripts/: download_data.py  verify_ingestion_logic.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/rag/: ChatInterface.tsx  MessageBubble.tsx  SourceCard.tsx  ThemeToggle.tsx
frontend/src/components/ui/: button.tsx
