[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed-gpu>=0.7.4",
    "llama-index>=0.14.12",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "sec-edgar-downloader>=5.0.3",
]
